objects/EXPRN__BIQ_Configuration__c.object
<CustomObject>
    <description>Setup and configuration object for Admin</description>
    <fields>
        <fullName>EXPRN__AMS_Service_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AMS Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__AMS_WS_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AMS WS Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Account_Record_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_Credit_Policy_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIQ Credit Policy ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_Decision_WS_PWD__c</fullName>
        <label>BIQ Decision WS PWD</label>
        <length>40</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_Decision_WS_User_ID__c</fullName>
        <description>Decision webservice user Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BIQ Decision WS User ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_International_WS_PWD__c</fullName>
        <label>BIQ International WS PWD</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_International_WS_User_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIQ International WS User ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_Portfolio_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIQ Portfolio ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_User_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIQ User ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_User_PWD__c</fullName>
        <label>BIQ User PWD</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_WS_PWD__c</fullName>
        <label>BIQ WS PWD</label>
        <length>12</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>EXPRN__BIQ_WS_User_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BIQ WS User ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EXPRN__Batch_Decisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Decisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Billing_SubcodePort__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Subcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Billing_Subcode_B_Dec__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Subcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Billing_Subcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Subcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Owner_Background__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Owner Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__CAPS_Subcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CAPS Subcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__CAPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Canada_BCR_PWD__c</fullName>
        <label>Canada BCR PWD</label>
        <length>40</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>EXPRN__Canada_BCR_User_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Canada BCR User ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Canada_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canada Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Canada_WS_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CanadaWSURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__Company_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Consumer_Credit_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer Credit Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Search_WS_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Search WS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__DecisionIQ_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DecisionIQ Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__DecisionWebServiceURL__c</fullName>
        <description>URL is used in Decision WebService .</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DecisionWebServiceURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_Response_Type__c</fullName>
        <description>This field is used to pass the value of field response type in DecisionIQCaps.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Response Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Decision_Sub_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub code for decisioning</description>
        <label>Decision Sub Code</label>
        <referenceTo>EXPRN__Subscriber_Code__c</referenceTo>
        <relationshipName>BIQ_Configurations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Dynamic_Service_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dynamic Service URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__Dynamic_WebService_URL__c</fullName>
        <description>It is used in Dynamic WebService.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dynamic WebService URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Business_Facts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide or display Experian Business Facts section on the Account Page</description>
        <label>Experian Business Facts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Business_Information__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show or hide Experian Business Information on the Account Page</description>
        <label>Experian Business Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Commercial_Fraud_Shield__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide or show Experian Commercial Fraud Shield on the  Account Page</description>
        <label>Experian Commercial Fraud Shield</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Company_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Experian Company ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Payment_and_Legal_Filings_Sum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experian Payment and Legal Filings Sum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Risk_Dashboard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show or Hide Experian Risk Dashboard on the Account Page</description>
        <label>Experian Risk Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Search_Address__c</fullName>
        <description>When user clicks on Experian Search button, based on this picklist value address will be populate in Experian Search page.</description>
        <label>Experian Search Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Address</fullName>
                    <default>true</default>
                    <label>Billing Address</label>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Trade_Payment_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Experian Trade Payment Summary</description>
        <label>Experian Trade Payment Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__International_Credit_Report_Req_Template__c</fullName>
        <description>Request parameter of International Credit Report</description>
        <encryptionScheme>None</encryptionScheme>
        <label>International Credit Report Req Template</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__International_DIQ_PWD__c</fullName>
        <label>International DIQ PWD</label>
        <length>40</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>EXPRN__International_DIQ_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International DIQ URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__International_DIQ_User_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International DIQ User ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__International_Online_Profile_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International Online Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__International_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__International_Search_Limit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International Search Limit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__International_Search_WS_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>International Search WS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EXPRN__Last_BIQ_PWD_Reset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last BIQ PWD Reset</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Linkage_Subcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subcode used to fetch linkage details</description>
        <label>Linkage Subcode</label>
        <referenceTo>EXPRN__Subscriber_Code__c</referenceTo>
        <relationshipName>Linkages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Master_Subcode_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Subcode</label>
        <referenceTo>EXPRN__Subscriber_Code__c</referenceTo>
        <relationshipName>BIQ_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Master_Subcode_Text__c</fullName>
        <formula>EXPRN__Master_Subcode_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Subcode Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Master_Subcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Subcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NetConnect_Password__c</fullName>
        <label>NetConnect Password</label>
        <length>40</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>EXPRN__NetConnect_User_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NetConnect User Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Net_Connect_Customer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Net_Connect_DBHOST__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect DBHOST</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Net_Connect_EAI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect EAI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Net_Connect_Opinitials__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect Opinitials</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Net_Connect_Ref_Num__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Net_Connect_Reference_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Net Connect Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Online_Decisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Decisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Password_Reset_Endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password Reset Endpoint</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Portfolio_Scoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portfolio Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Premier_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premier Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Premium_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Premium Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__RegionalBureauCustomerId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RegionalBureauCustomerId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__RegionalBureauSubcode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RegionalBureauSubcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Report_Count__c</fullName>
        <description>Stores the minimum number of report/ decisions to be retained in Salesforce</description>
        <label>Report Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Report_Retention_Period__c</fullName>
        <description>Stores the number of days the credit report, decision to be retained in Salesforce org</description>
        <label>Report Retention Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__SubCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Coma separated value</inlineHelpText>
        <label>SubCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Subscriber_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__TypeForBusinessAndAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TypeForBusinessAndAddress</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__TypeForGlobalBINSearch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TypeForGlobalBINSearch</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Vendor_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Vendor_Version__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vendor Version</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Experian BIQ Configuration</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>BIQ Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian BIQ Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EXPRN__Alert_BIQ_Config</fullName>
        <active>false</active>
        <description>This validation rule is used to have a check if a particular org has the capability to do callouts for Alert.</description>
        <errorConditionFormula>EXPRN__Alerts__c == true &amp;&amp; ISBLANK(EXPRN__AMS_Service_URL__c)</errorConditionFormula>
        <errorDisplayField>EXPRN__AMS_Service_URL__c</errorDisplayField>
        <errorMessage>You must enter AMS Service URL if you have opted for Alerts.</errorMessage>
    </validationRules>
</CustomObject>